# game-sync

./: README.md
game-sync-client/: .eslintrc.cjs  package.json  pnpm-lock.yaml  postcss.config.cjs  tsconfig.json  vite.config.ts
game-sync-client/patches/: @tauri-apps__plugin-http@2.0.0-alpha.1.patch
game-sync-client/src/: App.vue  main.ts  router.ts  styles.css
game-sync-client/src-tauri/: Cargo.toml  tauri.conf.json
game-sync-client/src-tauri/icons/: icon.icns
game-sync-client/src-tauri/src/: main.rs  setup.rs
game-sync-client/src-tauri/src/commands/: api.rs  helpers.rs
game-sync-client/src-tauri/src/modules/: mod.rs  tray.rs
game-sync-client/src-tauri/src/plugins/: logger.rs  mod.rs  single_instance.rs  store.rs  stronghold.rs
game-sync-client/src/api/: app.ts  auth.ts  game.ts  store.ts
game-sync-client/src/components/base/: GSButton.vue  GSCard.vue  LoadingSpinner.vue
game-sync-client/src/components/form/: GSInput.vue  GSTextarea.vue
game-sync-client/src/components/partials/: BottomFooter.vue  LoadingIndicator.vue  MainLayout.vue  NavBar.vue
game-sync-client/src/pages/: HomePage.vue  LoginPage.vue  SetupPage.vue
game-sync-client/src/pages/dashboard/: AccountPage.vue  GamesPage.vue  HomePage.vue
game-sync-client/src/pages/dashboard/games/: AddGamePage.vue  AddVersionPage.vue  EditGamePage.vue  GameFormPage.vue  GameViewPage.vue  GamesPage.vue  getContrastColor.ts
game-sync-client/src/store/modules/: app.ts  auth.ts
game-sync-client/src/styles/: route-animations.css  styles.css  tooltip.css
game-sync-client/src/types/: game.ts  helpers.ts  http_errors.ts  pagination.ts
game-sync-client/src/utils/: colors.ts  debounce.ts
server-api/: .gitignore  Cargo.toml  config.toml  docker-compose.yaml  makefile  server-api.code-workspace
server-api/projects/actix-multi-session/: Cargo.toml
server-api/projects/actix-multi-session/src/: config.rs  lib.rs  middleware.rs  session.rs
server-api/projects/actix-multi-session/src/provider/: cookie.rs  interface.rs  mod.rs  opaque_token.rs
server-api/projects/actix-multi-session/src/storage/: interface.rs  mod.rs  redis_rs.rs  session_key.rs
server-api/projects/app/: Cargo.toml
server-api/projects/app/src/: app.rs  bootstrap.rs  data.rs  main.rs
server-api/projects/app/src/controllers/: admin.rs  auth.rs  base.rs  mod.rs
server-api/projects/app/src/controllers/admin/: admin.rs  auth.rs  mod.rs
server-api/projects/app/src/controllers/api/: auth.rs  games.rs  mod.rs  versions.rs
server-api/projects/app/src/core/: config.rs  database.rs  errors.rs  mod.rs  s3.rs  setup.rs  types.rs
server-api/projects/app/src/entities/: game.rs  game_banner.rs  mod.rs  prelude.rs  user.rs
server-api/projects/app/src/helpers/: colors.rs  hashing.rs  jwt.rs  jwt_numeric_date.rs  mod.rs
server-api/projects/app/src/helpers/opaque_token/: config.rs  middleware.rs  mod.rs
server-api/projects/app/src/helpers/validation/: mod.rs  required_str.rs
server-api/projects/app/src/middlewares/: auth.rs  guest.rs
server-api/projects/app/src/models/: admin.rs  games.rs  mod.rs  pagination.rs  search.rs  user.rs
server-api/projects/app/src/repositories/: app.rs  games.rs  mod.rs  user.rs
server-api/projects/app/src/routes/: admin.rs  api.rs  mod.rs
server-api/projects/app/templates/: index.html
server-api/projects/migration/: Cargo.toml
server-api/projects/migration/src/: lib.rs  m20230820_204552_create_user_table.rs  m20230904_210741_create_game_table.rs  m20230912_151812_add_banner_to_game_table.rs  m20230920_192459_create_files_table.rs
server-api/projects/panel/: index.html  package.json  pnpm-lock.yaml  postcss.config.cjs  tailwind.config.cjs  tsconfig.json  vite.config.ts
server-api/projects/panel/src/: App.vue  main.ts  router.ts  style.css
server-api/projects/panel/src/api/: app.api.ts  auth.api.ts  init.ts
server-api/projects/panel/src/components/: GSCard.vue
server-api/projects/panel/src/components/base/: GSButton.vue
server-api/projects/panel/src/components/form/: GSInput.vue
server-api/projects/panel/src/components/partials/: FullScreenPage.vue  LoadingIndicator.vue  NavBar.vue  ProgressBar.vue
server-api/projects/panel/src/pages/: HomePage.vue  LoginPage.vue  RegisterPage.vue
server-api/projects/panel/src/store/modules/: app.ts  auth.ts  progress.ts
server-api/projects/panel/src/types/: app.interface.ts  user.interface.ts
