[workspace]
members = ["projects/*"]
exclude = ["projects/panel", "projects/actix-extras"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
sea-orm = { version = "0", features = [
    "sqlx-postgres",
    "macros",
    "runtime-actix-rustls",
    "with-time",
] }
dotenvy = "0"
