[package]
name = "game-sync-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4"
actix-rt = "2"
actix-session = { version = "0", features = ["redis-rs-session"] }
actix-web-validator = "5"
actix-web-lab = { version = "0", features = ["spa"] }
actix-utils = "3"

# Data formating / manipulation
serde = { workspace = true }
dotenvy = { workspace = true }
config = "0"
validator = { version = "0.16", features = ["derive"] }
argon2 = { version = "0", "features" = ["std"] }
rand = { version = "0", features = ["std"] }
hex = "0"

# Database
sea-orm = { workspace = true }

# Logging
tracing = "0"
tracing-subscriber = "0"

# Error handling
thiserror = "1"
anyhow = "1"

# Timing
time = { version = "0", features = ["serde", "serde-well-known"] }

# Templating
tera = "1"
