[package]
name = "game-sync-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4"
actix-rt = "2"
actix-multi-session = { path = "../actix-multi-session" }
actix-web-validator = "5"
actix-web-lab = { version = "0", features = ["spa"] }
actix-multipart = "0"
actix-utils = "3"
actix-web-grants = "3"

# Async
futures = "0"
tokio = { version = "1", features = ["full"] }

# Data formating / manipulation
serde = { workspace = true }
dotenvy = { workspace = true }
config = "0"
validator = { version = "0.16", features = ["derive"] }
argon2 = { version = "0", "features" = ["std"] }
rand = { version = "0", features = ["std"] }
hex = "0"
uuid = { version = "1", features = ["v4"] }

# Database
sea-orm = { workspace = true }
#rust-s3-async = "0"
rust-s3-async = { path = "../../../rust-s3-async/s3" }

# Logging
tracing = { version = "0", features = [
    "max_level_debug",
    "release_max_level_info",
] }
tracing-subscriber = "0"

# Error handling
thiserror = "1"
anyhow = "1"

# Timing
time = { version = "0", features = ["serde", "serde-well-known"] }

# Templating
tera = "1"
